Bugfix: <x-taginput> shows scrollbar on Windows

--- a/stylesheets/x-taginput.css
+++ b/stylesheets/x-taginput.css
@@ -50,7 +50,6 @@
   align-items: flex-start;
   align-content: flex-start;
   cursor: text;
-  overflow-y: scroll;
 }
 
 #items {
